# fastapidemo

./: README.md  pyproject.toml
app/: main.py  models.py
templates/: index.html
