[tool.poetry]
name = "fastapidemo"
version = "0.1.0"
description = "A demo using fastAPI with a datepicker."
authors = ["Kevin Amstutz <kevin@amstutz.io>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
